# mdviewer

./: LICENSE  README.md  RELEASE_NOTE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: test.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AboutDialog.tsx  FileExplorer.tsx  ImageLightbox.tsx  MarkdownRenderer.tsx  Mermaid.tsx  SearchBar.tsx  Sidebar.tsx  Toolbar.tsx  UpdateDialog.tsx  UpdateToast.tsx
src/hooks/: useContentWidth.ts  useTheme.ts
src/styles/: index.css
src/utils/: remarkAutolinkTrim.ts  updateChecker.ts
