[package]
name = "mdviewer"
version = "0.1.3"
description = "A simple markdown viewer."
authors = ["createchance"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "fs-read-file", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
walkdir = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
