[package]
name = "mdviewer"
version = "0.1.5"
description = "A simple markdown viewer."
authors = ["createchance"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "fs-read-file", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
walkdir = "2"
tauri-plugin-theme = "1.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize for size to reduce memory footprint
opt-level = "s"
# Enable LTO for better dead code elimination and smaller binary
lto = true
# Single codegen unit for maximum optimization
codegen-units = 1
# Strip debug symbols
strip = true
# Abort on panic to avoid unwinding overhead
panic = "abort"
